--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Rooney
-subtitle: Frontend developer Rooney.
+title: devlopr
+subtitle: A Portfolio Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
-  Frontend developer Rooney.
+  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
 url: "https://dev-rooney.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -27,19 +27,26 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: Rooney
-author_bio: 안녕하세요. 프론트앤드 개발자 Rooney 입니다.
-author_email: "devrooney2020@gmail.com"
-author_location: Korea
-author_website_url: "https://dev-rooney.github.io"
-typewrite-text: 안녕하세요. 프론트앤드 개발자 Rooney 입니다.
+author: John Doe
+author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
+author_email: "mail@sujaykundu.com"
+author_location: India
+author_website_url: "https://sujaykundu.com"
+typewrite-text: 안녕하세요. 프론트앤드 개발자 Rooney입니다.
+
 # Experiences
-author_work_experiences: 블로코 XYZ
+author_work_experiences:
             - company_name: Google
               company_logo: google.png
               company_url: https://google.com
               designation: Software Engineer
               description: Worked on various Google Products
+              visibility: true
+            - company_name: Microsoft
+              company_logo: microsoft.png
+              company_url: https://microsoft.com
+              designation: Azure Developer
+              description: Worked on various Azure Cloud Products
               visibility: true
 
 # Education
